Add name, image, and title to homepage

--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 
 <body>
     <header>
-
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo"></a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Ashley Preece</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 
     <script src="https://kit.fontawesome.com/84138e39d8.js" crossorigin="anonymous"></script>
