--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-home" aria-hidden="true"></i>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-home"
+                                            aria-hidden="true"></i>
                                         Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
+                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-graduation-cap"
+                                            aria-hidden="true"></i>
                                         Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa fa-comment-o" aria-hidden="true"></i>
+                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa fa-comment-o"
+                                            aria-hidden="true"></i>
                                         Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-download" aria-hidden="true"></i>
+                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-download"
+                                            aria-hidden="true"></i>
                                         Download</span></a>
                             </li>
                         </ul>
@@ -53,7 +57,61 @@
 
     </section>
     <footer>
-
+        <div class="container-fluid">
+            <div id="footer-details" class="row">
+                <div class="col-sm-4">
+                    <h5 class="uppercase general-sub">About</h5>
+                    <p class="inline-block">Student full stack developer with experience using HTML5, CSS3 (standard &
+                        bootstrap), Javascript, and python. BEng(Hons) Materials Engineering, level 3 management, iOSH,
+                        I-GAS level 1, 8+ Years Ceramic manufacturing experience. </p>
+                </div>
+                <div class="col-sm-4">
+                    <h5 class="uppercase general-sub">Download</h5>
+                    <p class="inline-block">
+                        Need a printable version of my CV? Download it here.
+                        <a href="#" target="_blank" class="cv-pdf">
+                            <i class="fa fa-download" aria-hidden="true"></i>
+                            <span class="sr-only">Download link.</span>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <h5 class="uppercase general-sub">Social</h5>
+                    <ul class="list-inline social-links">
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">X</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
+                                <span class="sr-only">LinkedIn</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i>
+                                <span class="sr-only">Pinterest</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
+                                <span class="sr-only">Youtube</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/84138e39d8.js" crossorigin="anonymous"></script>
