Add main section content to index.html

--- a/resume.html
+++ b/resume.html
@@ -33,13 +33,13 @@
                                         Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-graduation-cap"
-                                            aria-hidden="true"></i>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><span><i
+                                            class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
                                         Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa fa-comment-o"
-                                            aria-hidden="true"></i>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><span><i
+                                            class="fa-solid fa fa-comment-o" aria-hidden="true"></i>
                                         Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
@@ -53,10 +53,54 @@
             </div>
         </div>
     </header>
-    <section>
-        resume
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>I'm a technical manager at a well-known ceramics manufacturing company looking to
+                                    transition into the role of Full Stack developer. I have a wealth of diverse and
+                                    technical life experience, and an aptitude for problem solving, which translates
+                                    perfectly into my development projects.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>With good, intuitive functionality and UX at the forefront. I understand that
+                                    when it
+                                    comes to making a successful application, funtion and form go hand in hand.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-    <footer>
+    <footer class="container-fluid">
         <div class="container-fluid">
             <div id="footer-details" class="row">
                 <div class="col-sm-4">
