Added resume.html content

--- a/resume.html
+++ b/resume.html
@@ -55,10 +55,24 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="08/2014 - 04/2020">
+                        <h4>Wade Ceramics Ltd.</h4>
+                        <p>Ceramic Technician / Sliphouse Supervisor</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2020 - 09/2022">
+                        <h4>Kennelbuild Ltd.</h4>
+                        <p>Materials Procurement Manager / Workshop Manager</p>
+                    </div>
+                    <div class="timeline-item" data-dates="09/2022 - Present">
+                        <h4>Steelite International</h4>
+                        <p>Kiln Manager</p>
                     </div>
                 </div>
             </div>
