--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
                                         Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-download"
-                                            aria-hidden="true"></i>
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><span><i
+                                            class="fa-solid fa-download" aria-hidden="true"></i>
                                         Download</span></a>
                             </li>
                         </ul>
@@ -62,8 +62,10 @@
                 <div class="center-form">
                     <form>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
-                        <textarea rows="5" type="projectsummary" name="email" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
+                            required>
+                        <textarea rows="5" type="projectsummary" name="email" id="projectsummary" class="form-control"
+                            placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
                                 <button type="submit" class="btn btn-secondary">Send Project Request</button>
@@ -87,7 +89,7 @@
                     <h5 class="uppercase general-sub">Download</h5>
                     <p class="inline-block">
                         Need a printable version of my CV? Download it here.
-                        <a href="#" target="_blank" class="cv-pdf">
+                        <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                             <i class="fa fa-download" aria-hidden="true"></i>
                             <span class="sr-only">Download link.</span>
                         </a>
