--- a/github.html
+++ b/github.html
@@ -10,6 +10,9 @@
         integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/github-information.js"></script>
     <title>Ashley</title>
 </head>
 
@@ -47,8 +50,8 @@
                                         Interests</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
-                                <a href="github.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa fa-github"
-                                            aria-hidden="true"></i>
+                                <a href="github.html" class="hvr-sweep-to-bottom"><span><i
+                                            class="fa-solid fa fa-github" aria-hidden="true"></i>
                                         Github</span></a>
                             </li>
                             <li class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem">
@@ -65,23 +68,16 @@
     <section class="container-fluid">
         <div class="row bg-color-contact">
             <div class="col">
-                <h3 class="contact-heading uppercase text-center">Got a preject in mind?</h3>
-                <h5 class="uppercase text-center">Let's work together!</h5>
+                <h3 class="contact-heading uppercase text-center">View My GitHub Projects</h3>
+                <h5 class="uppercase text-center">You can also search on other user profiles</h5>
 
                 <div class="center-form">
-                    <form>
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email"
-                            required>
-                        <textarea rows="5" type="projectsummary" name="email" id="projectsummary" class="form-control"
-                            placeholder="Project description" required></textarea>
-                        <div class="form-row text-center">
-                            <div class="col">
-                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
-                            </div>
-                        </div>
-                    </form>
+                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <div id="gh-user-data"></div>
+                    <div id="gh-repo-data"></div>
+
                 </div>
+
             </div>
         </div>
     </section>
