--- a/index.html
+++ b/index.html
@@ -27,22 +27,31 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa-home"
                                             aria-hidden="true"></i>
                                         Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><span><i
                                             class="fa-solid fa-graduation-cap" aria-hidden="true"></i>
                                         Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><span><i
                                             class="fa-solid fa fa-comment-o" aria-hidden="true"></i>
                                         Contact</span></a>
+                            <li class="col-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><span><i
+                                            class="fa-solid fa fa-users" aria-hidden="true"></i>
+                                        Interests</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><span><i class="fa-solid fa fa-github"
+                                            aria-hidden="true"></i>
+                                        Github</span></a>
+                            </li>
+                            <li class="col-6 col-sm-2 ui-menu-color-download list-inline-item menuitem">
                                 <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><span><i
                                             class="fa-solid fa-download" aria-hidden="true"></i>
                                         Download</span></a>
