--- a/interests.html
+++ b/interests.html
@@ -225,8 +225,8 @@
             </div>
         </div>
     </footer>
-
     <script src="https://kit.fontawesome.com/84138e39d8.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script>
         function initMap() {
             var map = new google.maps.Map(document.getElementById("map"), {
@@ -236,6 +236,28 @@
                     lng: -33.134766
                 }
             });
+            var labels = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+            var locations = [{
+                    lat: 40.785091,
+                    lng: -73.968285
+                },
+                {
+                    lat: 41.084045,
+                    lng: -73.874245
+                },
+                {
+                    lat: 40.754932,
+                    lng: -73.984016
+                }
+            ];
+            var markers = locations.map(function (location, i) {
+                return new google.maps.Marker({
+                    position: location,
+                    label: labels[i % labels.length]
+                });
+            });
+            
+            const markerCluster = new markerClusterer.MarkerClusterer({ markers, map });
         }
     </script>
     <script
